# antiplagiarism

./: .gitignore  LICENSE  README.md
backend/: .gitignore  .pre-commit-config.yaml  alembic.ini  entrypoint.py  pyproject.toml  pytest.ini  t.docx  tmp.py
backend/base/: defaults.py
backend/base/abs/: repository.py  service.py
backend/base/types/: pytypes.py
backend/base/types/orm/: models.py  type_decorators.py
backend/envs/: .env.example
backend/scripts/migrations/: apply_migrations.sh  create_migrations.sh  recreate_migrations.sh
backend/sqls/dumps/: on_start.sql  prod.dump.sql  two_docs.sql
backend/sqls/queries/: data_collect.sql
backend/src/app/core/: constants.py  enums.py
backend/src/app/core/abstracts/: text_parser.py
backend/src/app/core/services/: __init__.py  antiplagiarism.py  indexer.py  tokenizer.py
backend/src/app/infrastructure/: constants.py
backend/src/app/infrastructure/api/: __init__.py
backend/src/app/infrastructure/exceptions/: authentication_exception.py
backend/src/app/infrastructure/functions/: file.py
backend/src/app/infrastructure/helpers/: file_upload_helper.py  folder_edit_helper.py
backend/src/app/infrastructure/parsers/: document_parser.py  file_content_parser.py
backend/src/base/: defaults.py  enums.py  exceptions.py  schema.py
backend/src/base/abs/: repository.py  service.py
backend/src/base/types/: pytypes.py
backend/src/config/settings/: __init__.py  base.py
backend/src/utils/alembic/: env.py
backend/src/utils/constants/: models_fields.py
backend/src/utils/exceptions/: api_exception.py
backend/src/utils/functions/: __init__.py  datetime.py
backend/src/utils/helpers/: exceptions.py
(+351 files in other folders)
